# mc

01-blink/: main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/protocol-task/: protocol-task.c
02-control/stdio-task/: stdio-task.c  stdio-task.h
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c
04-bme/: CMakeLists.txt  main.c
05-display/: CMakeLists.txt  main.c
05-display/protocol-task/: protocol-task.h
libs/bme280-driver/: CMakeLists.txt
libs/bme280-driver/include/: CMakeCache.txt  bme280-driver.h  bme280-regs.h
libs/bme280-driver/src/: bme280-driver.c
libs/ili9341-driver/: CMakeLists.txt
libs/protocol/: CMakeLists.txt
